# viewselection_nogui

./: .gitignore  .gitmodules  CMakeLists.txt  run_nogui.py
cpp/: CMakeLists.txt
cpp/include/: VoxelGrid.h  buffer.h  common.h  fastvoxeltraversal.h  mathutils.h
cpp/src/: VoxelGrid.cpp  binding.cpp  policies.cpp  policies_face.cpp
python/: VoxelGrid.py  auto.py  config.py
python/utils/: metric.py
